[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel>=0.37.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "python-rainwave-client"
description = "Python client library for Rainwave"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dynamic = [
    "version",
]

[[project.authors]]
name = "William Jackson"
email = "william@subtlecoolness.com"

[project.urls]
"Documentation" = "https://python-rainwave-client.subtlecoolness.com/"
"Repository" = "https://github.com/williamjacksn/python-rainwave-client"
"Issues" = "https://github.com/williamjacksn/python-rainwave-client/issues"

[tool.setuptools.dynamic]
version.attr = "rainwaveclient.__version__"
