[build-system]
build-backend = "uv_build"
requires = ["uv-build>=0.9.11,<0.10.0"]

[tool.uv.build-backend]
module-name = "rainwaveclient"

[project]
name = "python-rainwave-client"
version = "2026.0"
description = "Python client library for Rainwave"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[[project.authors]]
name = "William Jackson"
email = "william@subtlecoolness.com"

[project.urls]
"Documentation" = "https://python-rainwave-client.subtlecoolness.com/"
"Repository" = "https://github.com/williamjacksn/python-rainwave-client"
"Issues" = "https://github.com/williamjacksn/python-rainwave-client/issues"

[dependency-groups]
dev = [
    "notch>=2025.2",
    "ruff>=0.14.6",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
    "ty>=0.0.9",
    "uv-build>=0.9.11",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
