[metadata]
name = python-rainwave-client
version = attr: rainwaveclient.__version__
author = William Jackson
author_email = william@subtlecoolness.com
description = Python client library for Rainwave
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/williamjacksn/python-rainwave-client
project_urls =
    Bug Tracker = https://github.com/williamjacksn/python-rainwave-client/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
